# shogi_dataloader

./: Cargo.toml  README.md
src/: dataloader.rs  error.rs  lib.rs
